_k8s/demo/base-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: panweiji-base-prod
  labels:
    app: panweiji-base-prod    # 指定 label，便于检索

spec:
  containers:
    - name: mysql
      image: mysql:8
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 3306
      args: [ "--group_concat_max_len=102400","--max_connections=6000","--max_connect_errors=2000" ,"--lower_case_table_names=1" ]

    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80


# 创建Pod
# kubectl create  -f base-pod.yaml
# 查看pod
# kubectl get pods
# 查看pod日志
# kubectl logs -f pod名称
# 进入Pod的内部容器
# kubectl exec -it pod名称 bash
# 删除Pod
# kubectl delete pod pod-name
