_k8s/demo/business-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: panweiji-business-service
  labels:
    app: panweiji-business-service

spec:
  type: LoadBalancer                   # 规格类型NodePort、LoadBalancer、Ingress实现Pod外网访问和负载均衡
  selector:
    app: panweiji-business             # 通过Pod的labels指定Pod 建立关联
  ports:
    - port: 8080                       # 指定Service接收请求的端口
      protocol: TCP                    # 定义通信协议
      targetPort: 8080                 # 请求转发的端口


# 创建Service
# kubectl create -f business-service.yaml
# 查看Service的状态
# kubectl get svc
# 查看Service的详细信息
# kubectl describe svc/business-service
# 删除Service
# kubectl delete svc svc-name
